@@ -1,3 +1,4 @@
 class Tweet < ActiveRecord::Base
   belongs_to :user
+  has_and_belongs_to_many :lists
 end
