@@ -10,6 +10,10 @@ Version 0.3
   * Added clear both after every second category tweets/members display in welcome page
   * Redirect to welcome page when user is not logged in and tries to access protected page
   * Refactoring: Changed singleton TWITTER_HTTP_ACCESS class into TwitterAccess module
+  * Changed show user page to be public
+  * Added lists_tweets table for tweets categorization
+  * Query optimizations in welcome controller
+  * Changed number of users / tweets per category to 5 on welcome page
 
 27.01.2010
 ==========
